# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/util/process_version.gni")

process_version("version") {
  sources = [
    "//chrome/VERSION",
  ]
  template_file = "aw_version_info_values.h.version"
  output = "$root_gen_dir/android_webview/common/aw_version_info_values.h"
}
