# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# This variable shared between 'glue' and 'glue_resource_rewriter' because
# ResourceRewrite.java need to be generated according 'glue' deps.
glue_library_deps = [
  "//android_webview:android_webview_java",
  "//android_webview:android_webview_commandline_java",
  "//android_webview:android_webview_platform_services_java",
  "//base:base_java",
  "//components/autofill/android:autofill_java",
  "//components/autofill/android:provider_java",
  "//content/public/android:content_java",
  "//net/android:net_java",
  "//ui/android:ui_java",
]
